--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -118,8 +118,7 @@
                             android:id="@+id/textL2"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:elevation="20dp"
-                            android:layout_gravity="center"
+                            android:elevation="20dp" android:layout_gravity="center"
                             android:textColorHint="@color/colorGray"
                             app:passwordToggleEnabled="true">
 
