--- a/app/src/main/res/layout/file_detail_layout.xml
+++ b/app/src/main/res/layout/file_detail_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_gravity="center"
@@ -38,7 +38,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginEnd="5dp"
@@ -60,6 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Date Received"
+            android:textSize="12sp"
             android:layout_margin="10dp"
             android:layout_marginBottom="5dp"/>
 
@@ -69,6 +70,7 @@
             android:layout_height="wrap_content"
             android:text="Name of Sender"
             android:layout_margin="10dp"
+            android:textSize="12sp"
             android:layout_marginBottom="5dp"/>
 
     </LinearLayout>
